[project]
name = "harlequin-mysql"
version = "1.2.0"
description = "A Harlequin adapter for MySQL."
authors = [
    { name = "Ted Conbeer", email = "tconbeer@users.noreply.github.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "harlequin>=1.25.0,<3",
    "mysql-connector-python>=9.1.0,<10",
]

[project.entry-points."harlequin.adapter"]
mysql = "harlequin_mysql:HarlequinMySQLAdapter"

[dependency-groups]
dev = [
    "ruff>=0.6,<1",
    "pytest>=8,<9",
    "mypy>=1.11,<2",
    "pre-commit>=3.5.0,<4",
    "importlib-metadata>=4.6.0; python_full_version < '3.10.0'",
]

[tool.poetry]
dependencies.python = ">=3.9,<3.14"
packages = [
    { include = "harlequin_mysql", from = "src" },
]

[build-system]
requires = ["poetry-core>=2"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["A", "B", "E", "F", "I"]

[tool.mypy]
python_version = "3.9"
files = [
    "src/**/*.py",
    "tests/**/*.py",
]
mypy_path = "src:stubs"

show_column_numbers = true

# show error messages from unrelated files
follow_imports = "normal"

# be strict
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
strict_optional = true

warn_return_any = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true

no_implicit_reexport = true
strict_equality = true
