[tool.poetry]
name = "harlequin-mysql"
version = "1.2.0"
description = "A Harlequin adapter for MySQL."
authors = ["Ted Conbeer <tconbeer@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "harlequin_mysql", from = "src" },
]

[tool.poetry.plugins."harlequin.adapter"]
mysql = "harlequin_mysql:HarlequinMySQLAdapter"

[tool.poetry.dependencies]
python = ">=3.9"
harlequin = ">=1.25.0,<3"
mysql-connector-python = "^9.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6"
pytest = "^8"
mypy = "^1.11"
pre-commit = "^3.5.0"
importlib_metadata = { version = ">=4.6.0", python = "<3.10.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["A", "B", "E", "F", "I"]

[tool.mypy]
python_version = "3.9"
files = [
    "src/**/*.py",
    "tests/**/*.py",
]
mypy_path = "src:stubs"

show_column_numbers = true

# show error messages from unrelated files
follow_imports = "normal"

# be strict
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
strict_optional = true

warn_return_any = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true

no_implicit_reexport = true
strict_equality = true
